# WebSmith

./: .env.example  .gitignore  LICENSE  Makefile
.claude/: settings.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_indexes_and_contact_unique.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/providers/: ai.py  discovery.py  enrichment.py
backend/app/schemas/: api.py
backend/app/services/: businesses.py  jobs.py  settings.py  website_projects.py
backend/scripts/: openai_smoke.py
backend/tests/: test_api.py
docs/business/: CLIENT_WORKFLOW.md
docs/product/: PRODUCT_STATUS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.tsx
frontend/src/components/: Button.tsx  CockpitMetrics.tsx  LeadActions.tsx  LeadDetail.tsx  LeadFilters.tsx  LeadTable.tsx  LeadTabs.tsx  MapPanel.tsx  Modal.tsx  SearchControls.tsx  Skeleton.tsx
frontend/src/lib/: activityOptions.ts  api.ts  leadActions.ts  leadFilters.ts  statusTones.ts  types.ts
ontology-agent/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  project.yaml
ontology-agent/graph/: constraints.cypher
ontology-agent/graphify-out/: GRAPH_REPORT.md
ontology-agent/ontology/: core.ttl  mappings.yaml  shapes.ttl
ontology-agent/scripts/: bootstrap_neo4j.py  export_wiki.py  run_graphify.py  smoke_e2e.py
ontology-agent/wiki/: graph-summary.md  index.md
(+435 files in other folders)
